Ticket #1102 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

bug in mms module

Reported by: xxxxxxxx Assigned to: hartman
Priority: normal Milestone: 0.9.0 bugs
Component: Access Version:
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description (Last modified by courmisch)

mms://av.wp.pl/wptv-rozrywka doesn't work in VLC, but works in Windows Media Player.

main debug: adding playlist item `mms://av.wp.pl/wptv-rozrywka' ( mms://av.wp.pl/wptv-rozrywka )
main debug: creating new input thread
main debug: waiting for thread completion
main debug: thread 4240 (input) created at priority 1 (input/input.c:265)
main debug: `mms://av.wp.pl/wptv-rozrywka' gives access `mms' demux `' path `av.wp.pl/wptv-rozrywka'
main debug: creating demux: access='mms' demux='' path='av.wp.pl/wptv-rozrywka'
main debug: looking for access_demux module: 0 candidates
main warning: no access_demux module matched "mms"
main debug: creating access 'mms' path='av.wp.pl/wptv-rozrywka'
main debug: looking for access2 module: 6 candidates
access_mms debug: waiting for connection...
main debug: net: connecting to av.wp.pl port 1755
main debug: connection in progress
main debug: select timed out
main error: Connection to av.wp.pl port 1755 failed: Connection timed out
access_mms error: failed to open a connection (tcp)
access_mms debug: waiting for connection...
main debug: net: connecting to av.wp.pl port 1755
main debug: connection in progress
main debug: select timed out
main error: Connection to av.wp.pl port 1755 failed: Connection timed out
access_mms error: failed to open a connection (tcp)
access_mms error: cannot connect to server
main debug: net: connecting to av.wp.pl port 80
main debug: connection in progress
access_mms debug: HTTP reply 'HTTP/1.0 200 OK'
access_mms debug: stream type = broadcast
access_mms error: cannot read data
access_mms debug: complete header size=7136
access_mms debug: packet count=34733 packet size=1440
access_mms debug: starting stream
main debug: net: connecting to av.wp.pl port 80
main debug: connection in progress
access_mms error: error: HTTP/1.0 400 Bad Request
access_mms error: cannot start stream
vcd debug: trying .cue file: av.wp.cue
vcd debug: could not find .cue file
access_file warning: av.wp.pl/wptv-rozrywka: No such file or directory
cdda debug: trying .cue file: av.wp.cue
cdda debug: could not find .cue file
cdda warning: could not open av.wp.pl/wptv-rozrywka
main warning: no access2 module matching "mms" could be loaded
main error: no suitable access module for `mms://av.wp.pl/wptv-rozrywka'
main debug: thread times: real 0m11.265625s, kernel 0m0.062500s, user 0m0.078125s
main debug: thread 4240 joined (input/input.c:412)
main: nothing to play

Change History

13/03/07 01:37:59 changed by hartman

  • status changed from new to assigned.
  • severity changed from blocker to normal.
  • component changed from Input to Access.
  • priority changed from highest to normal.
  • platform changed from Win32+Linux to all.
  • milestone set to 0.9.0 bugs.
  • owner set to hartman.

no TCP server, no UDP server, Tries HTTP, but errors out on Bad Request. to be investigated

13/03/07 18:53:13 changed by courmisch

  • version deleted.
  • description changed.

Fixed description layout.

23/03/07 20:24:50 changed by fenrir

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [19398]) Fixed #1102 ("Bad request" error) Completed RESET command support. Updated user agent to "NSPlayer/7.10.0.3059"