Fixed #1102 ("Bad request" error) Completed RESET command support. Updated user agent to "NSPlayer/7.10.0.3059"